[project]
name = "build-your-own-search-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "niquests>=3.14.0",
    "polars[pandas]>=1.26.0",
    "scikit-learn>=1.6.1",
]
